--- a/Server/index.html
+++ b/Server/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <nav>
-            <h1>Chat App</h1>
+            <h1 style="color: white;">Chat App</h1>
         </nav>
         <div class="row">
             <div class="online col-lg-3 col-md-3 col-sm-2">
