--- a/Server/index.html
+++ b/Server/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Chat App</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
+        <script defer src="https://live-chat-web.herokuapp.com/socket.io/socket.io.js"></script>
         <script defer src="client.js"></script>
         <link rel="stylesheet" href="client.css">
     </head>
